Tentando resolver UnsupportedOperationException
Close #68